k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
    spec:
      containers:
      - name: hola-container
        image: hola-mundo-node
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
