k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hola-service
spec:
  selector:
    app: hola
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
