k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hola-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hola.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hola-service
            port:
              number: 80
